@startuml
skinparam class {
    BackgroundColor AliceBlue
    ArrowColor DarkGrey
    BorderColor DarkGrey
}
hide members
class Stork <<entry-point>> #line.bold;line:CornflowerBlue
interface ServiceDiscovery
interface ServiceInstance #line.bold;line:CornflowerBlue
interface LoadBalancer
interface ConfigProvider <<SPI>>
class Service <<named>> #line.bold;line:CornflowerBlue

Stork --[dotted] ConfigProvider
Stork -- "*" Service
Service -- ServiceDiscovery
Service -- "0..1" LoadBalancer

Service --[dotted] ServiceInstance: selectServiceInstance

class Kubernetes implements ServiceDiscovery
class Consul implements ServiceDiscovery
class Static implements ServiceDiscovery
class "Custom Service Discovery" implements ServiceDiscovery

class RoundRobin implements LoadBalancer
class LeastResponseTime implements LoadBalancer
class "Custom Load Balancer" implements LoadBalancer

@enduml